# H3D

./: .gitignore  CMakeLists.txt  Metropolis.cpp  Metropolis.h  Plotting_Data.ipynb  README.md  collect_data.cpp  helpers.cpp  helpers.h  main_parallel.cpp  spinflip_model_v2.pt  train_model_v2.py
